# grid-precision

./: CMakeLists.txt
include/: import.h  numerical_functions.h  odes.h
matlab/: coe2rvECI.m  main.m  ode_kepler.m  print_results.m
results/: plot.plt
src/: import.cpp  main.cpp  numerical_functions.cpp  odes.cpp
